我的简历模块完成